# UrningsAPS_Core

./: CMakeLists.txt
include/: item_selection.hpp  model.hpp  paired_update.hpp  utils.hpp
src/: item_selection.cpp  model.cpp  paired_update.cpp  urnings_factory.cpp  utils.cpp
test/: CMakeLists.txt  test_some_feature.cpp
